chore: apply OpenRewrite formatting to StudyRepositoryTest